--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "netlify-cli": "^12.12.0",
     "react-error-overlay": "^6.0.9",
     "vite": "^4.1.0"
   }
